--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "sass": "1.74.1",
     "stylelint": "16.3.1",
     "stylelint-config-htmlacademy": "4.2.0",
+    "stylelint-order": "^6.0.4",
+    "stylelint-order-htmlacademy": "2.1.0",
     "w3c-html-validator": "1.7.0"
   }
 }
